--- a/dorm-mart/.gitignore
+++ b/dorm-mart/.gitignore
@@ -29,7 +29,9 @@ deploy-aptitude.sh
 deploy-local.sh
 deploy-cattle.sh
 
-/media
+/media/*
+!/media/profile-photos/
+!/media/profile-photos/**
 
 # Test file Sameer made to test login api
 body.json
