--- a/dorm-mart/composer.json
+++ b/dorm-mart/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
+        "php": ">=8.0",
+        "ext-mysqli": "*",
         "phpmailer/phpmailer": "^6.11",
         "symfony/http-foundation": "5.4",
         "symfony/deprecation-contracts": "2.5",
